--- a/properties/templates/property_list.html
+++ b/properties/templates/property_list.html
@@ -1,35 +1,37 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>قائمة العقارات</title>
-    <style>
-        body {
-            direction: rtl;
-            font-family: 'Arial', sans-serif;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <form method="GET" action="">
-            <div>
-                            <input type="text" name="query" class="form-control" placeholder="ابحث عن عقار..." value="{{ request.GET.query }}">
-            </div>
-            <button type="submit" class="btn btn-primary">بحث</button>
-        </form>
-    		<h1 class="text-center">قائمة العقارات</h1>
-            <ul class="list-group">
-                {% for property in properties %}
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    {{ property.name }} - {{ property.address }}
-                    <span class="badge bg-primary rounded-pill">{{ property.description }}</span>
-                </li>
-                {% endfor %}
-            </ul>
-    </div>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<h2>قائمة العقارات</h2>
+
+<form method="GET" action="">
+  {{ form.query }}
+  <button type="submit" class="btn btn-primary">بحث</button>
+</form>
+
+<table class="table table-bordered mt-3">
+  <thead>
+    <tr>
+      <th>اسم العقار</th>
+      <th>العنوان</th>
+      <th>الإجراءات</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for property in properties %}
+    <tr>
+      <td>{{ property.name }}</td>
+      <td>{{ property.address }}</td>
+      <td>
+        <a href="{% url 'property_edit' property.pk %}" class="btn btn-info btn-sm">تعديل</a>
+        <a href="{% url 'property_delete' property.pk %}" class="btn btn-danger btn-sm">حذف</a>
+      </td>
+    </tr>
+    {% empty %}
+    <tr>
+      <td colspan="3">لا توجد عقارات</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+<a href="{% url 'property_create' %}" class="btn btn-success">إضافة عقار جديد</a>
+{% endblock %}
