--- a/properties/templates/property_list.html
+++ b/properties/templates/property_list.html
@@ -33,5 +33,5 @@
     {% endfor %}
   </tbody>
 </table>
-<a href="{% url 'property_create' %}" class="btn btn-success">إضافة عقار جديد</a>
+<a href="{% url 'property_add' %}" class="btn btn-success">إضافة عقار جديد</a>
 {% endblock %}
