--- a/properties/templates/property_list.html
+++ b/properties/templates/property_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container mt-4">
   <h2>قائمة العقارات</h2>
-  < form method="GET" class="form-inline mb-4">
+  <form method="GET" class="form-inline mb-4">
     <input type="text" name="name" placeholder="ابحث عن اسم العقار" class="form-control mr-2" value="{{ request.GET.name }}">
     <select name="property_type" class="form-control mr-2">
       <option value="">نوع العقار</option>
@@ -56,7 +56,8 @@
       </li>
       {% endfor %}
       {% if properties.has_next %}
-      <li class="page-item"><a class="page-link" href="?page={{ properties.next_page_number }}">&raquo;</a>
+      <li class="page-item"><a class="page-link" href="?page={{ properties.next_page_number }}">&raquo;</a></li>
+    {% endif %}
     </ul>
   </nav>
 </div>
