--- a/properties/templates/property_list.html
+++ b/properties/templates/property_list.html
@@ -29,7 +29,7 @@
       <tr>
         <td>{{ property.name }}</td>
         <td>{{ property.property_type }}</td>
-        <td>{{ property.addre }}</td>
+        <td>{{ property.address }}</td>
         <td>{{ property.price }} ر.ع</td>
         <td>{% if property.available %}متاح{% else %}مؤجر{% endif %}</td>
         <td>
